--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "ethers-v5-wrappers",
-  "version": "1.0.0",
+  "version": "1.0.0-rc.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
+  "typings": "build/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "gts lint",
