--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "ethers": "^6.11.1",
+  "peerDependencies": {
+    "ethers": ">=6.0.0",
     "ethers-v5": "npm:ethers@^5.7.2",
     "@ethersproject/abstract-provider": "^5.7.0"
   },
+  "dependencies": {
+    "ethers-v5": "npm:ethers@^5.7.2"
+  },
   "devDependencies": {
+    "@ethersproject/abstract-provider": "^5.7.0",
     "gts": "^5.2.0",
+    "ethers": "^6.11.1",
     "typescript": "~5.2.0",
     "@types/node": "20.8.2"
   },
