--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
   "author": "",
   "license": "ISC",
   "peerDependencies": {
-    "ethers": ">=6.0.0",
-    "ethers-v5": "npm:ethers@^5.7.2",
-    "@ethersproject/abstract-provider": "^5.7.0"
+    "ethers": ">=6.0.0"
   },
   "dependencies": {
     "ethers-v5": "npm:ethers@^5.7.2"
