--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethers-v5-wrappers",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0-rc.2",
   "description": "",
   "main": "build/index.js",
   "typings": "build/index.d.ts",
@@ -25,10 +25,10 @@
   },
   "devDependencies": {
     "@ethersproject/abstract-provider": "^5.7.0",
-    "gts": "^5.2.0",
+    "@types/node": "20.8.2",
     "ethers": "^6.11.1",
-    "typescript": "~5.2.0",
-    "@types/node": "20.8.2"
+    "gts": "^5.2.0",
+    "typescript": "~5.2.0"
   },
   "engines": {
     "node": ">=11"
