--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
-    "posttest": "npm run lint"
+    "posttest": "npm run lint",
+    "prepublish": "pnpm clean && pnpm compile"
   },
   "keywords": [],
   "author": "",
