--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethers-v5-wrappers",
-  "version": "1.0.0-rc.8",
+  "version": "1.0.0-rc.9",
   "description": "",
   "main": "build/index.js",
   "typings": "build/index.d.ts",
@@ -19,12 +19,18 @@
   "author": "",
   "license": "ISC",
   "peerDependencies": {
-    "ethers": ">=6.0.0",
-    "@ethersproject/providers": ">=5"
+    "@ethersproject/providers": ">=5",
+    "@ethersproject/bignumber": ">=5",
+    "@ethersproject/abstract-signer": ">=5",
+    "@ethersproject/properties": ">=5",
+    "ethers": ">=6.0.0"
   },
   "devDependencies": {
-    "@ethersproject/providers": "5.7.2",
     "@ethersproject/abstract-provider": "5.7.0",
+    "@ethersproject/abstract-signer": "5.7.0",
+    "@ethersproject/providers": "5.7.2",
+    "@ethersproject/properties": "5.7.0",
+    "@ethersproject/bignumber": "5.7.0",
     "@types/node": "20.8.2",
     "ethers": "^6.11.1",
     "gts": "^5.2.0",
