--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethers-v5-wrappers",
-  "version": "1.0.0-rc.10",
+  "version": "1.0.0",
   "description": "",
   "main": "build/index.js",
   "typings": "build/index.d.ts",
